Fix Row Gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -207,7 +207,7 @@ h1{font-size: var(--fs-h1);}
 }
 @media screen and (min-width: 1100px){
     .social-proof{
-        /* grid-template-rows: 5fr 5fr; */
+        grid-template-rows: 5fr 5.5fr;
     }
     .testimonial:nth-child(1){
         align-self: flex-start;
